<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:divider="@drawable/divider"
    android:dividerPadding="8dp"
    android:orientation="horizontal"
    android:showDividers="middle">

    <ImageView
        android:id="@+id/plus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_set"
        android:src="@drawable/ic_baseline_add_circle_24"
        android:background="?selectableItemBackgroundBorderless"
        app:tint="?attr/colorOnSurface"
        android:layout_marginVertical="10dp"
        android:layout_weight="1"
        android:contentDescription="@string/add_set" />

    <ImageView
        android:id="@+id/minus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/delete_set"
        android:layout_marginVertical="10dp"
        android:src="@drawable/ic_baseline_remove_circle_24"
        android:background="?selectableItemBackgroundBorderless"
        app:tint="?attr/colorOnSurface"
        android:layout_weight="1"
        android:contentDescription="@string/delete_set" />
    <ImageView
        android:id="@+id/info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/delete_set"
        android:layout_marginVertical="10dp"
        android:src="@drawable/ic_baseline_info_24"
        android:background="?selectableItemBackgroundBorderless"
        app:tint="?attr/colorOnSurface"
        android:layout_weight="1"
        android:contentDescription="@string/description" />
</LinearLayout>